Parte 2 do exercicio

--- a/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
+++ b/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
@@ -59,7 +59,12 @@
         document.getElementsByTagName("p")[1].innerText = string;
     };
     changeTagP('Daqui a 2 anos me vejo como um grande desenvolvedor.');
-    
+    // 2
+    const changeSquareColor = (color) => {
+        document.querySelector(".main-content").style.backgroundColor = color;
+    };
+    changeSquareColor('rgb(76,164,109)');
+    // 3
     </script>
   </body>
 </html>
