parte 3 do exercicio

--- a/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
+++ b/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
@@ -65,6 +65,10 @@
     };
     changeSquareColor('rgb(76,164,109)');
     // 3
+    const changeCenterSquareColor = (color) => {
+        document.querySelector(".center-content").style.backgroundColor = color;
+    };
+    changeCenterSquareColor('white');
     </script>
   </body>
 </html>
