parte 4 do exercicio

--- a/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
+++ b/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
@@ -69,6 +69,11 @@
         document.querySelector(".center-content").style.backgroundColor = color;
     };
     changeCenterSquareColor('white');
+    // 4
+    const changeTagH1 = (string) => {
+        document.getElementsByTagName("h1")[0].innerText = string;
+    };
+    changeTagH1('Exercício - JavaScript');
     </script>
   </body>
 </html>
