--- a/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
+++ b/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-01-js-dom-seletores/exercicio2/index.html
@@ -76,7 +76,8 @@
     changeTagH1('Exercício - JavaScript');
     // 5
     const changeTagP2 = () => {
-        document.getElementsByTagName("p")[0].style.textTransform = 'uppercase';
+        
+        console.log(document.getElementsByTagName("p")[0].style.textTransform = 'uppercase');
 
     }
     changeTagP2();
