--- a/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-04-js-web-storage/exercicio1/index.html
+++ b/fundamentos/secao-05-javascript-dom-eventos-webstorage/dia-04-js-web-storage/exercicio1/index.html
@@ -44,6 +44,7 @@
       <span>Tipo da fonte</span>
       <button>Arial</button>
       <button>Times New Roman</button>
+      <button>Verdana</button>
     </section>
   </section>
   <main>
