--- a/fundamentos/secao-06-html-css-forms-flexbox-responsivo/dia-02-lb-js-fw-css/exercicio2/form.html
+++ b/fundamentos/secao-06-html-css-forms-flexbox-responsivo/dia-02-lb-js-fw-css/exercicio2/form.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
+    <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="style.css">
     <title>Formulario-TrybeTrip</title>
 </head>
@@ -13,7 +18,7 @@
 <body>
     <h1>Concorra à Viagem dos seus sonhos com a TrybeTrip</h1>
 
-    <form >
+    <form>
         <fieldset>
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingNameInput" placeholder="Nome completo"
@@ -49,8 +54,8 @@
             </div>
             <br />
 
-            <label class="form-label" for="date">Qual a melhor data para realizar sua viagem?</label>
-            <input type="date" id="date">
+            <label class="form-label" for="datepicker">Qual a melhor data para realizar sua viagem?</label>
+            <input type="text" id="datepicker">
             <br />
 
             <label class="form-check-label form-label" for="promo">Gostaria de receber outras incríveis oportunidades
@@ -67,8 +72,11 @@
         <button type="submit" class="btn btn-primary" id="submit-btn">Participar do concurso TrybeTrip</button>
         <button type="button" class="btn btn-warning" id="clear-btn">Apagar informações</button>
     </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
+    <script src="pikaday.js"></script>
+    <script>
+        var picker = new Pikaday({
+            field: document.getElementById('datepicker')
+        });
     </script>
     <script src="script.js"></script>
 </body>
