--- a/front-end/secao-01-javascript-testes-assincronos/pratica-casa-cambio/index.html
+++ b/front-end/secao-01-javascript-testes-assincronos/pratica-casa-cambio/index.html
@@ -9,12 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="@sweetalert2/themes/dark/dark.css">
-    <script src="sweetalert2/dist/sweetalert2.min.js"></script>
-    <title>Document</title>
-    <script src="./src/style.css">
-        
-    </script>
+    <title>Casa de Câmbio</title>
 </head>
 
 <body>
